<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/recipe_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/camera_detail_titlebar"
            android:layout_width="match_parent"
            android:layout_height="80dip"
            android:background="@color/title_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/connect_status"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/disconnect"
                android:contentDescription="@string/disconnect" />

            <ImageView
                android:id="@+id/lan_status"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@+id/connect_status"
                android:layout_marginEnd="60dp"
                android:contentDescription="@string/lan_status"
                android:src="@drawable/button_red" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="35dip"
                    android:background="@drawable/one_big_disconnect"
                    android:contentDescription="@string/barbecue_one" />

                <ImageView
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="35dip"
                    android:background="@drawable/two_small_disconnect"
                    android:contentDescription="@string/barbecue_two" />

                <ImageView
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="35dip"
                    android:background="@drawable/three_small_disconnect"
                    android:contentDescription="@string/barbecue_three" />

                <ImageView
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="0dip"
                    android:background="@drawable/four_small_disconnect"
                    android:contentDescription="@string/barbecue_four" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="vertical">
            <TextView
                android:id="@+id/centerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="" />

            <LinearLayout
                android:id="@+id/all_product_layout"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/change_all_probes_h"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/centerTextView"
                android:background="@drawable/button_disable_bg"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/change_all_probes_text_l"
                    android:layout_marginEnd="@dimen/change_all_probes_text_r"
                    android:text="@string/all_probes"
                    android:textColor="@color/disconnect_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/change_all_probes_h"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/centerTextView"
                android:background="@drawable/button_web_bg"
                android:gravity="center">

                <Button
                    android:id="@+id/web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/change_all_probes_text_l"
                    android:layout_marginEnd="@dimen/change_all_probes_text_r"
                    android:background="@drawable/button_web_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/web" />

            </LinearLayout>



            <ImageView
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dip"
                android:src="@drawable/setting"
                android:contentDescription="@string/setting" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/left_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/left_time_word_size"
                android:textStyle="bold"
                android:visibility="visible" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/temperature_ring"
                    android:contentDescription="@string/temperature_ring_image" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">


                    <!--TextView：PID-->
                    <!--TextView：bbq_name_label-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/pid"
                        android:textColor="@color/circle_bg"
                        android:textSize="@dimen/barbecue_mac"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bbq_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/test_id"
                        android:textColor="@color/circle_bg"
                        android:textSize="@dimen/barbecue_id"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/left_time_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/left_time_text_color"
                        android:textSize="@dimen/left_time_text_word_size"
                        android:textStyle="bold"
                        android:visibility="gone" />


                    <TextView
                        android:id="@+id/current_temperature_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/left_time_text_color"
                        android:textSize="@dimen/left_time_text_word_size"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/current_temperature_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:tag="current"
                        android:textColor="#FFDE94"
                        android:textSize="@dimen/barbecue_temp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/battery_low"
                    android:tag="battery"
                    android:visibility="gone"
                    android:contentDescription="@string/battery_icon_image" />

                <ImageView
                    android:id="@+id/grill_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="matrix"
                    android:src="@drawable/grill_temperature"
                    android:visibility="gone"
                    android:contentDescription="@string/grill_temperature_icon" />

                <ImageView
                    android:id="@+id/target_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="matrix"
                    android:src="@drawable/target_temperature"
                    android:visibility="gone"
                    android:contentDescription="@string/target_temperature_icon" />

                <ImageView
                    android:id="@+id/current_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="matrix"
                    android:src="@drawable/current_temperature"
                    android:visibility="gone"
                    android:contentDescription="@string/current_temperature_icon" />

            </FrameLayout>

            <RelativeLayout
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp">

                <TextView
                    android:id="@+id/start_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="60dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/start_temperature"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/end_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="45dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/end_temperature"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/status_layout"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/barbecue_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="26dp"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:textColor="@color/barbecue_status_text_color"
                android:textSize="@dimen/barbecue_status_text_word_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/target"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/target"
                android:gravity="center"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/grill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/grill"
                android:gravity="center"
                android:tag="grill"
                android:textColor="#000000"
                android:visibility="invisible" />
        </LinearLayout>

        <Button
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/start_btn"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_action_word_size"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <fmgtech.grillprobee.barbecue.SettingMenuImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:clickable="false" />

</FrameLayout>