<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/recipe_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/camera_detail_titlebar"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        layout="@layout/title_bar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/title_bg"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dip"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/temperature_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="12pt" />
            <TextView
                android:id="@+id/unit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="12pt"
                android:layout_gravity="center"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/celsius_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dip" />

            <ImageView
                android:id="@+id/fahrenheit_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dip"/>


        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/title_bg"
        >

        <TextView
            android:id="@+id/alarm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dip"
            android:textColor="@android:color/white"
            android:textSize="12pt" />

        <Button
            android:id="@+id/alarm_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="8dip"
            android:background="@drawable/recipe_bg"
            android:textColor="@color/button_lang_text"
            android:textSize="12pt"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/title_bg"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dip"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/language"
            android:textSize="12pt" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dip"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/english_layout"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="#FFE177"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_lang_text"
                    android:textSize="12pt"
                    android:text="@string/english" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/chinese_tw_layout"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/button_lang_bg"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_lang_text"
                    android:textSize="12pt"
                    android:text="@string/chinese_tw"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/chinese_layout"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/button_lang_bg"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_lang_text"
                    android:textSize="12pt"
                    android:text="@string/chinese" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/deutsch_layout"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/button_lang_bg"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_lang_text"
                    android:textSize="12pt"
                    android:text="@string/deutsch"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>